@@ -18,18 +18,9 @@ end
 SchwerEngine.config = SchwerEngineConfig
 
 module SchwerEngine::Tests
-  require 'testrect.rb'
-  require 'testentity.rb'
-  require 'testsprite.rb'
-  require 'testitem.rb'
-  require 'testgfxtheme.rb'
-  require 'testmap.rb'
-  require 'testmodel.rb'
-  require 'testmodelloader.rb'
-  require 'testtimelock.rb'
-  require 'testgroup.rb'
-  require 'testselectivegroup.rb'
-  require 'testselectivegroup.rb'
+  # require all test source files
+  test_files = Dir['test*.rb']
+  test_files.each {|t| require t}
 end
 
 class SchwerEngine::Tests::TestSuite
@@ -37,17 +28,11 @@ class SchwerEngine::Tests::TestSuite
   def self.suite
     suite = Test::Unit::TestSuite.new("SchwerEngine test suite")
 
-    suite << TestRect.suite
-    suite << TestEntity.suite
-    suite << TestSprite.suite
-    suite << TestItem.suite
-    suite << TestGfxTheme.suite
-    suite << TestMap.suite
-    suite << TestModel.suite
-    suite << TestModelLoader.suite
-    suite << TestTimeLock.suite
-    suite << TestGroup.suite
-    suite << TestSelectiveGroup.suite
+    ObjectSpace.each_object(Class) do |klass|
+      if klass < Test::Unit::TestCase then
+        suite << klass.suite    
+      end
+    end
 
     return suite
   end
@@ -55,10 +40,8 @@ end
 
 
 
-if $0 == __FILE__ then
-  require 'test/unit/ui/console/testrunner'
+require 'test/unit/ui/console/testrunner'
 
-  verbosity = Test::Unit::UI::VERBOSE
-  Test::Unit::UI::Console::TestRunner.run(SchwerEngine::Tests::TestSuite,
-                                          verbosity)
-end
+verbosity = Test::Unit::UI::VERBOSE
+Test::Unit::UI::Console::TestRunner.run(SchwerEngine::Tests::TestSuite,
+                                        verbosity)
